--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 </ul>
             </div>
         </div>
-        <div class="section page2 active">
+        <div class="section page2">
             <h2>成长经历</h2>
             <ul>
                 <li>
